service-manifest.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: mysvc
  name: mysvc
spec:
  ports:
  - name: 80-8080
    port: 80
    protocol: TCP
    targetPort: 8080
  selector:
    app: myapp
  type: ClusterIP
