ingress-resource.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-app
spec:
  rules:
    - http:
        paths:
        - path: /
          pathType: Prefix
          backend:
               service:
                 name: mysvc
                 port: 
                   number: 80
